set arStarted to false when ending session

--- a/inline-session.html
+++ b/inline-session.html
@@ -255,6 +255,7 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
           if (arStarted) {
             // Turn the background back on when we go back to the inlive view.
             skybox.visible = true;
+            arStarted = false;
           }
         }
       }
