--- a/inline-session.html
+++ b/inline-session.html
@@ -121,7 +121,7 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
         document.querySelector('header').appendChild(vrButton.domElement);
 
         arButton = new WebXRButton({
-          onRequestSession: onRequestVRSession,
+          onRequestSession: onRequestARSession,
           onEndSession: onEndSession,
           textEnterXRTitle: "START AR",
           textXRNotFoundTitle: "AR NOT FOUND",
