put changes from inline-session in own page

--- a/index.html
+++ b/index.html
@@ -152,6 +152,13 @@
 
         <script>
           let pages = [
+          { title: 'Übung Inline Session', category: 'HTW-Übung',
+              path: 'htw-uebung-inline-session.html',
+              description: 'Aufgabe der HTW-Übung zu Mixed-Reality.' },
+
+            { tag: 'hr' },
+            { tag: 'br' },
+
             { title: 'Immersive VR Session', category: 'Basics',
               path: 'immersive-vr-session.html',
               description: 'Demonstrates use of an "immersive-vr" XRSession to present a WebGL scene on a VR headset.' },
