--- a/htw-uebung-inline-session.html
+++ b/htw-uebung-inline-session.html
@@ -36,10 +36,7 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
       <details open>
         <summary>HTW-Übung - Inline Session</summary>
         <p>
-          This sample demonstrates use of an 'inline' XRSession to present
-          content on the page prior to entering XR presentation with an
-          immersive session. The viewer pose can be adjusted by clicking and
-          dragging with mouse or touch.
+          Aufgabe der HTW-Übung zu Mixed-Reality. Dies ist das Ergebnis für eine Abgabe im Pflichtteil.
           <a class="back" href="./">Back</a>
           <p>
             <input id='vertFOV' value='90' min='30' max='150' step='10' type='range'/><br/>
